

cmake_minimum_required(VERSION 3.8)

project("zuochengyun")

# 将源代码添加到此项目的可执行文件。
add_subdirectory("Chapter_2")


#add_executable(BubbleSort "BubbleSort.cpp" "public.h")
#add_executable(SelectSort "SelectSort.cpp")
#add_executable(InsertSort "InsertSort.cpp" "public.h")
#add_executable(FindAppearOddTimeNumber "FindAppearOddTimeNumber.cpp" "public.h")
#add_executable(FindAppearOddTimeTwoNumber "public.h" "FindAppearOddTimeTwoNumber.cpp")

